# EVIL-AI-RAG

./: .dockerignore  .env.example  .env.local.template  .gitignore  Dockerfile  Dockerfile.chromadb  GITHUB_SETUP.md  README.md  api.py  app.py  app1.py  config.py  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt
chat-widget-wordpress/: INSTALL.md
chat-widget-wordpress/plugin/evil-ai-doc-manager/: evil-ai-doc-manager.php
chat-widget-wordpress/plugin/evil-ai-doc-manager/assets/: admin.css  admin.js
chat-widget-wordpress/plugin/evil-ai-doc-manager/includes/: class-admin-page.php  class-api-client.php
chat-widget-wordpress/widget/: evil-ai-chat.css  evil-ai-chat.js
core/: analytics.py  chunker.py  paper_metadata.py  pdf_parser.py  providers.py  rag_chain.py  retriever.py
rahti/: deployment.yaml  pvc.yaml  route.yaml  secrets.yaml.template  service.yaml
