[project]
name = "research-paper-rag"
version = "0.1.0"
description = "End-to-end RAG system for research papers with multimodal PDF parsing, parent-child chunking, hybrid retrieval, and Streamlit chatbot."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=1.3.0",
    "langchain-groq>=1.1.0",
    "langchain-experimental>=0.4.0",
    "chromadb>=1.5.0",
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.3.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "fastapi>=0.125.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.18",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["streamlit>=1.31.0"]
ocr = ["easyocr>=1.7.0"]

[project.scripts]
ingest = "ingest:main"
